unpackaged/main/default/objects/OpportunityLineItem/fields/Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue__c</fullName>
    <label>Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>