unpackaged/main/default/objects/OpportunityLineItem/fields/Annualized_Revenue_for_Marketing_ROI__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue_for_Marketing_ROI__c</fullName>
    <formula>IF(CONTAINS(PricebookEntry.Product2.Name, &quot;AXCESSA&quot;), (12* TotalPrice)*0.3,
IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - ALL&quot;), (4* TotalPrice),
IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - COMPOSITE&quot;), (4* TotalPrice),
IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - FEES&quot;), (4* TotalPrice),
IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - DRIVING&quot;), (4* TotalPrice),
IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - GREEN&quot;), (4* TotalPrice),
IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - MANAGEMENT&quot;), (4* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;QUARTERLY PARTIAL&quot;), (8* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;MONTHLY&quot;), (12* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;BIMONTHLY&quot;), (6* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;VOLUME - QUARTERLY&quot;), (4* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;HALF DAY - QUARTERLY&quot;), (4* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;NCMI - SUBSCRIPTION&quot;), (12* TotalPrice),
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;LiveAudit Fee (10 + Stores)&quot;), (12* TotalPrice)*0.3,
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;LiveAudit Fee (1 to 9 Stores)&quot;), (12* TotalPrice)*0.3,
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Healthcheck (20 + Stores)&quot;), (12* TotalPrice)*0.5,
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Healthcheck (1 - 19 Stores)&quot;), (12* TotalPrice)*0.5,
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;LiveAudit - NADA Promotional&quot;), (12* TotalPrice)*0.3,
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Healthcheck Setup Fee&quot;), (TotalPrice)*0.5,
 UnitPrice )
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Revenue for Marketing ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>