unpackaged/main/default/objects/OpportunityLineItem/fields/Annualized_WFR_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Annualized_WFR_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annualized WFR Trigger</label>
    <type>Checkbox</type>
</CustomField>