unpackaged/main/default/objects/OpportunityLineItem/fields/Billing_Product__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Product</label>
    <referenceTo>Billing_Product__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>