unpackaged/main/default/objects/OpportunityLineItem/fields/Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months__c</fullName>
    <label>Contract Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>