unpackaged/main/default/objects/OpportunityLineItem/fields/Core_Product__c.field-meta.xml
<CustomField>
    <fullName>Core_Product__c</fullName>
    <formula>PricebookEntry.Product2.Core_Product__c</formula>
    <label>Core Product?</label>
    <type>Checkbox</type>
</CustomField>