unpackaged/main/default/objects/OpportunityLineItem/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Departments</inlineHelpText>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>