unpackaged/main/default/objects/OpportunityLineItem/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NCM Employee</inlineHelpText>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>