unpackaged/main/default/objects/OpportunityLineItem/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Marketing Tactic</inlineHelpText>
    <label>Dimension 3</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>