unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description>Reason this product was discounted</description>
    <inlineHelpText>Reason this product was discounted</inlineHelpText>
    <label>Discount Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>