unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Discount_Recipient__c</fullName>
    <description>Used by override flows and sales processes to identify who received a discount</description>
    <inlineHelpText>Used by override flows and sales processes to identify who received a discount</inlineHelpText>
    <label>Discount Recipient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>