unpackaged/main/default/objects/OpportunityLineItem/fields/Discounted__c.field-meta.xml
<CustomField>
    <fullName>Discounted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by override or sales flows to indicate this product was discounted by user.</description>
    <inlineHelpText>Used by override or sales flows to indicate this product was discounted by user.</inlineHelpText>
    <label>Discounted?</label>
    <type>Checkbox</type>
</CustomField>