unpackaged/main/default/objects/OpportunityLineItem/fields/Discounted_By__c.field-meta.xml
<CustomField>
    <fullName>Discounted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discounted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>