unpackaged/main/default/objects/OpportunityLineItem/fields/Has_Dim_1_2__c.field-meta.xml
<CustomField>
    <fullName>Has_Dim_1_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Dim 1 &amp; 2 (Code)</label>
    <type>Checkbox</type>
</CustomField>