unpackaged/main/default/objects/OpportunityLineItem/fields/Min_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount_Due__c</fullName>
    <label>Min Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>