unpackaged/main/default/objects/OpportunityLineItem/fields/NCMi_Paid_Seat2__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Paid_Seat2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>populated by automation with the value of the formula field NCMi Paid Seat</description>
    <label>NCMi Paid Seat</label>
    <type>Checkbox</type>
</CustomField>