unpackaged/main/default/objects/OpportunityLineItem/fields/NCMi_Paid_Seat__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Paid_Seat__c</fullName>
    <formula>OR(
   ISPICKVAL( PricebookEntry.Product2.Type__c , &#39;Paid Seat&#39;),
   ISPICKVAL( PricebookEntry.Product2.Type__c , &#39;GMEP&#39;),
   ISPICKVAL( PricebookEntry.Product2.Type__c , &#39;Training Credits&#39;)
)</formula>
    <label>NCMi Paid Seat</label>
    <type>Checkbox</type>
</CustomField>