unpackaged/main/default/objects/OpportunityLineItem/fields/Needs_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Needs_Provisioning__c</fullName>
    <formula>Records_Provisioned__c &lt; Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Provisioning</label>
    <type>Checkbox</type>
</CustomField>