unpackaged/main/default/objects/OpportunityLineItem/fields/Net_from_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_from_List_Price__c</fullName>
    <formula>((ListPrice -    UnitPrice  ) *  Quantity)*(-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net +/- from List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>