unpackaged/main/default/objects/OpportunityLineItem/fields/Pending_Price__c.field-meta.xml
<CustomField>
    <fullName>Pending_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Price?</label>
    <type>Checkbox</type>
</CustomField>