unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Provisioning_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Provisioning_Label__c</fullName>
    <formula>PricebookEntry.Product2.Name &amp; &quot; - (&quot; &amp;  TEXT( Quantity ) &amp; &quot;x $&quot; &amp; TEXT( UnitPrice ) &amp; &quot;): &quot; &amp;  TEXT( Quantity - Records_Provisioned__c ) &amp; &quot; Left to Provision&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Provisioning Label (Code)</label>
    <type>Text</type>
</CustomField>