unpackaged/main/default/objects/OpportunityLineItem/fields/Provisioning_Name__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Name__c</fullName>
    <formula>PricebookEntry.Product2.Name &amp; &quot;: $&quot; &amp;  TEXT( UnitPrice ) &amp; &quot; (&quot; &amp; TEXT( Quantity ) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisioning Name</label>
    <type>Text</type>
</CustomField>