unpackaged/main/default/objects/OpportunityLineItem/fields/Quantity_or_Value_Changed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_or_Value_Changed__c</fullName>
    <label>Quantity or Value Changed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>