unpackaged/main/default/objects/OpportunityLineItem/fields/Quarterly_Fee_CRC__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Fee_CRC__c</fullName>
    <formula>IF(BEGINS(PricebookEntry.Product2.Name, &quot;QUARTERLY - FEES&quot;), (1*TotalPrice), 
IF(CONTAINS(PricebookEntry.Product2.Name, &quot;QUARTERLY PARTIAL&quot;), (1*TotalPrice),
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Fee - CRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>