unpackaged/main/default/objects/OpportunityLineItem/fields/Ready_for_Commission__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Commission__c</fullName>
    <label>Ready for Commission</label>
    <type>Date</type>
</CustomField>