unpackaged/main/default/objects/OpportunityLineItem/fields/Ready_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ready to Invoice</label>
    <type>Checkbox</type>
</CustomField>