unpackaged/main/default/objects/OpportunityLineItem/fields/Records_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Records_Provisioned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Records Provisioned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>