unpackaged/main/default/objects/OpportunityLineItem/fields/Recurring_Payment__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Payment</label>
    <type>Checkbox</type>
</CustomField>