unpackaged/main/default/objects/OpportunityLineItem/fields/Refresh_Code__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh (Code)</label>
    <type>Checkbox</type>
</CustomField>