unpackaged/main/default/objects/OpportunityLineItem/fields/X3rd_QTR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X3rd_QTR_Revenue__c</fullName>
    <description>IF(OR(MONTH(DATEVALUE(CreatedDate)= 7), 
IF(OR(MONTH(DATEVALUE(CreatedDate)= 8),
IF(OR(MONTH(DATEVALUE(CreatedDate)= 9)),0,TotalPrice 


(IF( Month( Created_Date__c ) &gt;= 4 &amp;&amp; Month(Created_Date__c)&lt;= 6 , date(year(Created_Date__c)+1, 1, 1),



IF( Month(Created_Date__c) &gt;= 7 &amp;&amp; Month(Created_Date__c)&lt;= 9, date(year(Created_Date__c)+1, 04, 1),



IF(Month(Created_Date__c) &gt;= 10, date(year(Created_Date__c)+ 1, 07, 1), null

)

)

)

)

)
)))))</description>
    <formula>IF( Month(Created_Date__c) &gt;= 10 &amp;&amp; Month(Created_Date__c) &lt;= 12 &amp;&amp; YEAR(Created_Date__c) = 2014, TotalPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd QTR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>