unpackaged/main/default/objects/OpportunityLineItem/fields/X4th_QTR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X4th_QTR_Revenue__c</fullName>
    <formula>IF(
     BEGINS(TEXT(CreatedDate), &quot;10&quot;),0,TotalPrice 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4th QTR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>